Add loggers into tests. Add coveralls plugin