@@ -236,9 +236,15 @@
             </plugin>
 
             <plugin>
+                <groupId>org.eluder.coveralls</groupId>
+                <artifactId>coveralls-maven-plugin</artifactId>
+                <version>4.3.0</version>
+            </plugin>
+
+            <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
-                <version>0.7.7.201606060606</version>
+                <version>0.8.2</version>
                 <executions>
                     <execution>
                         <goals>
@@ -258,11 +264,14 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.0.0-M1</version>
                 <configuration>
                     <useSystemClassLoader>false</useSystemClassLoader>
-                    <argLine>-Dfile.encoding=UTF-8 @{argLine}<!-- -Xmx1280m -XX:MaxPermSize=512m--></argLine>
+                    <argLine>-Dfile.encoding=UTF-8 @{argLine}</argLine>
                     <forkCount>1</forkCount>
+                    <reuseForks>true</reuseForks>
                     <forkedProcessTimeoutInSeconds>500</forkedProcessTimeoutInSeconds>
+                    <printSummary>true</printSummary>
                 </configuration>
                 <executions>
                     <execution>
